--- a/index.html
+++ b/index.html
@@ -151,22 +151,27 @@
                 q5: document.querySelector('input[name="q5"]:checked').value,
             };
 
-            // Send answers to the Lambda function
-            const response = await fetch('YOUR_API_GATEWAY_URL', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ answers: Object.values(answers) })
-            });
+            try {
+                // Send answers to the Lambda function
+                const response = await fetch('https://5pgvq7e5wj.execute-api.ap-northeast-1.amazonaws.com/prod/recommend', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ answers: Object.values(answers) })
+                });
 
-            const data = await response.json();
+                const data = await response.json();
 
-            // Display the result
-            document.getElementById('menuName').innerText = data.recommended_menu;
-            document.getElementById('menuDescription').innerText = data.description;
-            document.getElementById('menuPrice').innerText = `価格: ¥${data.price}`;
-            document.getElementById('result').style.display = 'block';
+                // Display the result
+                document.getElementById('menuName').innerText = data.recommended_menu;
+                document.getElementById('menuDescription').innerText = data.description;
+                document.getElementById('menuPrice').innerText = `価格: ¥${data.price}`;
+                document.getElementById('result').style.display = 'block';
+            } catch (error) {
+                console.error('Error:', error);
+                alert('診断結果を取得できませんでした。もう一度お試しください。');
+            }
         });
     </script>
 </body>
