--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
             margin: 5px 0;
             color: #555;
         }
+        .shop-image {
+            width: 100%;
+            border-radius: 12px;
+            margin-top: 20px;
+        }
         @media (max-width: 768px) {
             h1 {
                 font-size: 1.5rem;
@@ -132,10 +137,11 @@
         </form>
         <div class="result" id="result">
             <h2>あなたにおすすめのシナモンロールは...</h2>
-            <img id="menuImage" src="" alt="Recommended Cinnamon Roll">
+            <img id="menuImage" src="">
             <p id="menuName"></p>
             <p id="menuPrice"></p>
         </div>
+        <img src="shop.png" alt="Shop Exterior" class="shop-image">
     </div>
 
     <script>
