--- a/index.html
+++ b/index.html
@@ -2,189 +2,89 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>シナモンロールおすすめ診断</title>
+    <title>Brown Roll - おすすめシナモンロール診断</title>
     <style>
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        .container {
-            background: #fff;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 480px;
-            margin: 20px auto;
-            text-align: center;
-        }
-        h1 {
-            font-size: 1.8rem;
-            color: #6200ee;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .banner {
-            width: 100%;
-            border-radius: 12px;
-            margin-bottom: 20px;
-        }
-        .question {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-        .question label {
-            font-weight: bold;
-            display: block;
-            margin-bottom: 8px;
-            color: #555;
-        }
-        input[type="radio"] {
-            margin-right: 10px;
-        }
-        button {
-            background-color: #6200ee;
-            color: #fff;
-            border: none;
-            padding: 15px;
-            border-radius: 8px;
-            cursor: pointer;
-            width: 100%;
-            font-size: 1rem;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #45009d;
-        }
-        .result {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            display: none;
-        }
-        .result h2 {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-            color: #6200ee;
-        }
-        .result img {
-            width: 100%;
-            border-radius: 12px;
-            margin-top: 10px;
-        }
-        .result p {
-            font-size: 1rem;
-            margin: 5px 0;
-            color: #555;
-        }
-        .shop-image {
-            width: 100%;
-            border-radius: 12px;
-            margin-top: 20px;
-        }
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 1.5rem;
-            }
-            button {
-                font-size: 0.9rem;
-                padding: 12px;
-            }
-            .container {
-                padding: 15px;
-            }
-        }
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        .question { margin: 20px 0; }
+        .result { margin-top: 30px; }
+        img { max-width: 300px; }
+        button { padding: 10px 20px; font-size: 16px; }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <img src="banner.png" alt="Banner" class="banner">
-        <h1>シナモンロールおすすめ診断</h1>
-        <form id="questionnaire">
-            <div class="question">
-                <label>コーヒーには砂糖を入れるタイプですか？</label>
-                <input type="radio" name="q1" value="はい" required> はい
-                <input type="radio" name="q1" value="いいえ"> いいえ
-            </div>
-            <div class="question">
-                <label>休日の過ごし方はどちらに近いですか？</label>
-                <input type="radio" name="q2" value="アウトドア派" required> アウトドア派
-                <input type="radio" name="q2" value="インドア派"> インドア派
-            </div>
-            <div class="question">
-                <label>映画は洋画よりも邦画が好きですか？</label>
-                <input type="radio" name="q3" value="はい" required> はい
-                <input type="radio" name="q3" value="いいえ"> いいえ
-            </div>
-            <div class="question">
-                <label>旅行に行くならどちらを選びますか？</label>
-                <input type="radio" name="q4" value="寒い場所" required> 寒い場所
-                <input type="radio" name="q4" value="暑い場所"> 暑い場所
-            </div>
-            <div class="question">
-                <label>朝食はパン派ですか？</label>
-                <input type="radio" name="q5" value="はい" required> はい
-                <input type="radio" name="q5" value="いいえ"> いいえ
-            </div>
-            <button type="submit">診断する</button>
-        </form>
-        <div class="result" id="result">
-            <h2 id="resultText">あなたにおすすめのシナモンロールは...</h2>
-            <img id="menuImage" src="" alt="おすすめシナモンロール">
-            <p id="menuName"></p>
-            <p id="menuPrice"></p>
+    <h1>Brown Roll - おすすめシナモンロール診断</h1>
+    <form id="quiz-form">
+        <div class="question">
+            <p>1. コーヒーには砂糖を入れるタイプですか？</p>
+            <label><input type="radio" name="q1" value="はい" required> はい</label>
+            <label><input type="radio" name="q1" value="いいえ"> いいえ</label>
         </div>
-        <img src="shop.png" alt="Shop Exterior" class="shop-image">
+        <div class="question">
+            <p>2. 休日の過ごし方はどちらに近いですか？</p>
+            <label><input type="radio" name="q2" value="アウトドア派" required> アウトドア派</label>
+            <label><input type="radio" name="q2" value="インドア派"> インドア派</label>
+        </div>
+        <div class="question">
+            <p>3. 映画は洋画よりも邦画が好きですか？</p>
+            <label><input type="radio" name="q3" value="はい" required> はい</label>
+            <label><input type="radio" name="q3" value="いいえ"> いいえ</label>
+        </div>
+        <div class="question">
+            <p>4. 旅行に行くならどちらを選びますか？</p>
+            <label><input type="radio" name="q4" value="寒い場所" required> 寒い場所</label>
+            <label><input type="radio" name="q4" value="暑い場所"> 暑い場所</label>
+        </div>
+        <div class="question">
+            <p>5. 朝食はパン派ですか？</p>
+            <label><input type="radio" name="q5" value="はい" required> はい</label>
+            <label><input type="radio" name="q5" value="いいえ"> いいえ</label>
+        </div>
+        <button type="submit">診断する</button>
+    </form>
+
+    <div class="result" id="result" style="display:none;">
+        <h2 id="recommendation"></h2>
+        <img id="menu-image" src="" alt="おすすめメニュー">
+        <p id="description"></p>
+        <p>価格: ¥<span id="price"></span></p>
     </div>
 
     <script>
-        document.getElementById('questionnaire').addEventListener('submit', async function (e) {
-            e.preventDefault();
+        document.getElementById('quiz-form').addEventListener('submit', async function(event) {
+            event.preventDefault();
 
-            const answers = {
-                q1: document.querySelector('input[name="q1"]:checked').value,
-                q2: document.querySelector('input[name="q2"]:checked').value,
-                q3: document.querySelector('input[name="q3"]:checked').value,
-                q4: document.querySelector('input[name="q4"]:checked').value,
-                q5: document.querySelector('input[name="q5"]:checked').value,
-            };
+            // 質問の回答を取得
+            const formData = new FormData(event.target);
+            const data = {};
+            formData.forEach((value, key) => {
+                data[key] = value;
+            });
 
             try {
-                const response = await fetch('https://5pgvq7e5wj.execute-api.ap-northeast-1.amazonaws.com/prod/recommend', {
+                // API Gatewayのエンドポイントを指定
+                const response = await fetch('https://ceq4qr0hf0.execute-api.ap-northeast-1.amazonaws.com/default/recommend', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ answers: Object.values(answers) })
+                    body: JSON.stringify(data)
                 });
 
                 if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
+                    throw new Error('ネットワークエラー');
                 }
 
-                const data = await response.json();
+                const result = await response.json();
 
-                // 'body' フィールドを再度JSONとしてパース
-                const result = JSON.parse(data.body);
-
-                // データをフロントエンドに反映
-                document.getElementById('resultText').innerText = `あなたにおすすめのシナモンロールは、${result.name_jp}です！`;
-                document.getElementById('menuImage').src = result.image_url;
-                document.getElementById('menuImage').alt = result.name_jp;
-                document.getElementById('menuName').innerText = `商品名: ${result.name_jp}`;
-                document.getElementById('menuPrice').innerText = `価格: ¥${result.price}`;
+                // 結果を表示
+                document.getElementById('recommendation').innerText = result.message;
+                document.getElementById('menu-image').src = result.image_url;
+                document.getElementById('description').innerText = result.description;
+                document.getElementById('price').innerText = result.price;
                 document.getElementById('result').style.display = 'block';
             } catch (error) {
-                console.error('Error:', error);
-                alert('診断結果を取得できませんでした。もう一度お試しください。');
+                alert('エラーが発生しました。もう一度お試しください。');
+                console.error(error);
             }
         });
     </script>
