--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             try {
                 // API Gatewayのエンドポイントを指定
-                const response = await fetch('https://ceq4qr0hf0.execute-api.ap-northeast-1.amazonaws.com/default/recommend', {
+                const response = await fetch('https://ceq4qr0hf0.execute-api.ap-northeast-1.amazonaws.com/recommend', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
