--- a/index.html
+++ b/index.html
@@ -3,52 +3,135 @@
 <head>
     <meta charset="UTF-8">
     <title>Brown Roll - おすすめシナモンロール診断</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
-        .question { margin: 20px 0; }
-        .result { margin-top: 30px; }
-        img { max-width: 300px; }
-        button { padding: 10px 20px; font-size: 16px; }
+        body {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            background-color: #f8f9fa;
+        }
+        .banner, .shop {
+            width: 100%;
+            height: auto;
+        }
+        .question-card, .result-card {
+            margin: 20px auto;
+            max-width: 600px;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .question-card h2, .result-card h2 {
+            margin-bottom: 20px;
+            color: #343a40;
+        }
+        .question {
+            margin-bottom: 15px;
+        }
+        .result {
+            text-align: center;
+        }
+        .result img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+            margin-top: 15px;
+        }
+        .footer {
+            margin-top: 40px;
+        }
     </style>
 </head>
 <body>
-    <h1>Brown Roll - おすすめシナモンロール診断</h1>
-    <form id="quiz-form">
-        <div class="question">
-            <p>1. コーヒーには砂糖を入れるタイプですか？</p>
-            <label><input type="radio" name="q1" value="はい" required> はい</label>
-            <label><input type="radio" name="q1" value="いいえ"> いいえ</label>
-        </div>
-        <div class="question">
-            <p>2. 休日の過ごし方はどちらに近いですか？</p>
-            <label><input type="radio" name="q2" value="アウトドア派" required> アウトドア派</label>
-            <label><input type="radio" name="q2" value="インドア派"> インドア派</label>
-        </div>
-        <div class="question">
-            <p>3. 映画は洋画よりも邦画が好きですか？</p>
-            <label><input type="radio" name="q3" value="はい" required> はい</label>
-            <label><input type="radio" name="q3" value="いいえ"> いいえ</label>
-        </div>
-        <div class="question">
-            <p>4. 旅行に行くならどちらを選びますか？</p>
-            <label><input type="radio" name="q4" value="寒い場所" required> 寒い場所</label>
-            <label><input type="radio" name="q4" value="暑い場所"> 暑い場所</label>
-        </div>
-        <div class="question">
-            <p>5. 朝食はパン派ですか？</p>
-            <label><input type="radio" name="q5" value="はい" required> はい</label>
-            <label><input type="radio" name="q5" value="いいえ"> いいえ</label>
-        </div>
-        <button type="submit">診断する</button>
-    </form>
+    <!-- ページ上部のバナー -->
+    <img src="https://brownroll2025.s3.amazonaws.com/banner.png" alt="Brown Roll Banner" class="banner">
 
-    <div class="result" id="result" style="display:none;">
-        <h2 id="recommendation"></h2>
-        <img id="menu-image" src="" alt="おすすめメニュー">
-        <p id="description"></p>
-        <p>価格: ¥<span id="price"></span></p>
+    <div class="container">
+        <!-- 質問フォーム -->
+        <div class="card question-card">
+            <h2>あなたにぴったりのシナモンロールを見つけましょう！</h2>
+            <form id="quiz-form">
+                <div class="mb-3 question">
+                    <label class="form-label">1. コーヒーには砂糖を入れるタイプですか？</label><br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q1" id="q1_yes" value="はい" required>
+                        <label class="form-check-label" for="q1_yes">はい</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q1" id="q1_no" value="いいえ">
+                        <label class="form-check-label" for="q1_no">いいえ</label>
+                    </div>
+                </div>
+
+                <div class="mb-3 question">
+                    <label class="form-label">2. 休日の過ごし方はどちらに近いですか？</label><br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q2" id="q2_outdoor" value="アウトドア派" required>
+                        <label class="form-check-label" for="q2_outdoor">アウトドア派</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q2" id="q2_indoor" value="インドア派">
+                        <label class="form-check-label" for="q2_indoor">インドア派</label>
+                    </div>
+                </div>
+
+                <div class="mb-3 question">
+                    <label class="form-label">3. 映画は洋画よりも邦画が好きですか？</label><br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q3" id="q3_yes" value="はい" required>
+                        <label class="form-check-label" for="q3_yes">はい</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q3" id="q3_no" value="いいえ">
+                        <label class="form-check-label" for="q3_no">いいえ</label>
+                    </div>
+                </div>
+
+                <div class="mb-3 question">
+                    <label class="form-label">4. 旅行に行くならどちらを選びますか？</label><br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q4" id="q4_cold" value="寒い場所" required>
+                        <label class="form-check-label" for="q4_cold">寒い場所</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q4" id="q4_hot" value="暑い場所">
+                        <label class="form-check-label" for="q4_hot">暑い場所</label>
+                    </div>
+                </div>
+
+                <div class="mb-3 question">
+                    <label class="form-label">5. 朝食はパン派ですか？</label><br>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q5" id="q5_yes" value="はい" required>
+                        <label class="form-check-label" for="q5_yes">はい</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="q5" id="q5_no" value="いいえ">
+                        <label class="form-check-label" for="q5_no">いいえ</label>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn btn-primary w-100">診断する</button>
+            </form>
+        </div>
+
+        <!-- 結果表示 -->
+        <div class="card result-card" id="result" style="display:none;">
+            <h2 id="recommendation"></h2>
+            <img id="menu-image" src="" alt="おすすめメニュー" loading="lazy">
+            <p id="description" class="mt-3"></p>
+            <p>価格: ¥<span id="price"></span></p>
+        </div>
     </div>
 
+    <!-- ページ下部のショップ画像 -->
+    <div class="footer">
+        <img src="https://brownroll2025.s3.amazonaws.com/shop.png" alt="Brown Roll Shop" class="shop">
+    </div>
+
+    <!-- Bootstrap JSと依存関係のPopper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.getElementById('quiz-form').addEventListener('submit', async function(event) {
             event.preventDefault();
@@ -61,7 +144,7 @@
             });
 
             try {
-                // API Gatewayのエンドポイントを指定
+                // API Gatewayのエンドポイントを指定（/recommend を追加）
                 const response = await fetch('https://ceq4qr0hf0.execute-api.ap-northeast-1.amazonaws.com/recommend', {
                     method: 'POST',
                     headers: {
