--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         .banner {
             width: 100%;
             height: auto;
-            max-height: 200px; /* 最大高さを設定 */
-            object-fit: cover; /* 画像の切り抜きを適切に */
+            max-width: 1200px; /* 最大幅を設定 */
+            margin: 0 auto;
+            display: block;
         }
         /* ショップ画像のスタイル */
         .shop {
             width: 100%;
             height: auto;
-            max-height: 150px; /* 最大高さを設定 */
-            object-fit: cover; /* 画像の切り抜きを適切に */
+            max-width: 1200px; /* 最大幅を設定 */
+            margin: 0 auto;
+            display: block;
         }
         /* 質問カードと結果カードのスタイル */
         .question-card, .result-card {
@@ -49,17 +51,25 @@
             height: auto;
             border-radius: 10px;
             margin-top: 15px;
-            max-height: 300px; /* 最大高さを設定 */
-            object-fit: cover; /* 画像の切り抜きを適切に */
+            /* max-heightを削除してトリミングを防止 */
         }
         .footer {
             margin-top: 40px;
+        }
+        /* レスポンシブ調整 */
+        @media (max-width: 576px) {
+            .question-card, .result-card {
+                padding: 15px;
+            }
+            .banner, .shop {
+                max-width: 100%;
+            }
         }
     </style>
 </head>
 <body>
     <!-- ページ上部のバナー -->
-    <img src="https://brownroll2025.s3.amazonaws.com/banner.png" alt="Brown Roll Banner" class="banner">
+    <img src="https://brownroll2025.s3.amazonaws.com/banner.png" alt="Brown Roll Banner" class="banner img-fluid">
 
     <div class="container">
         <!-- 質問フォーム -->
@@ -133,7 +143,7 @@
         <!-- 結果表示 -->
         <div class="card result-card" id="result" style="display:none;">
             <h2 id="recommendation"></h2>
-            <img id="menu-image" src="" alt="おすすめメニュー" loading="lazy">
+            <img id="menu-image" src="" alt="おすすめメニュー" loading="lazy" class="img-fluid">
             <p id="description" class="mt-3"></p>
             <p>価格: ¥<span id="price"></span></p>
         </div>
@@ -141,7 +151,7 @@
 
     <!-- ページ下部のショップ画像 -->
     <div class="footer">
-        <img src="https://brownroll2025.s3.amazonaws.com/shop.png" alt="Brown Roll Shop" class="shop">
+        <img src="https://brownroll2025.s3.amazonaws.com/shop.png" alt="Brown Roll Shop" class="shop img-fluid">
     </div>
 
     <!-- Bootstrap JSと依存関係のPopper.js -->
