--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .banner {
             width: 100%;
             height: auto;
-            max-width: 1200px; /* 最大幅を設定 */
+            max-width: 1200px; /* 必要に応じて調整 */
             margin: 0 auto;
             display: block;
         }
@@ -22,8 +22,8 @@
         .shop {
             width: 100%;
             height: auto;
-            max-width: 1200px; /* 最大幅を設定 */
-            margin: 0 auto;
+            max-width: 600px; /* 商品画像と同程度のサイズに設定 */
+            margin: 20px auto;
             display: block;
         }
         /* 質問カードと結果カードのスタイル */
@@ -51,7 +51,7 @@
             height: auto;
             border-radius: 10px;
             margin-top: 15px;
-            /* max-heightを削除してトリミングを防止 */
+            /* object-fitを削除してトリミングを防止 */
         }
         .footer {
             margin-top: 40px;
