--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .banner {
             width: 100%;
             height: auto;
-            max-width: 1200px; /* 必要に応じて調整 */
+            max-width: 1200px; /* 最大幅を設定 */
             margin: 0 auto;
             display: block;
         }
@@ -29,7 +29,8 @@
         /* 質問カードと結果カードのスタイル */
         .question-card, .result-card {
             margin: 20px auto;
-            max-width: 600px;
+            max-width: 1200px; /* バナーと同様の最大幅に設定 */
+            width: 100%;
             padding: 20px;
             border-radius: 10px;
             background-color: #ffffff;
@@ -38,6 +39,7 @@
         .question-card h2, .result-card h2 {
             margin-bottom: 20px;
             color: #343a40;
+            font-size: 2rem; /* デフォルトのフォントサイズを大きく設定 */
         }
         .question {
             margin-bottom: 15px;
@@ -57,12 +59,24 @@
             margin-top: 40px;
         }
         /* レスポンシブ調整 */
-        @media (max-width: 576px) {
+        @media (max-width: 768px) {
             .question-card, .result-card {
+                max-width: 100%; /* 小さな画面では最大幅を解除 */
                 padding: 15px;
             }
-            .banner, .shop {
-                max-width: 100%;
+            .question-card h2, .result-card h2 {
+                font-size: 1.75rem; /* フォントサイズを少し小さく */
+            }
+        }
+        @media (max-width: 576px) {
+            .question-card h2, .result-card h2 {
+                font-size: 1.5rem; /* スマートフォン向けにさらにフォントサイズを大きく */
+            }
+            .form-label {
+                font-size: 1.25rem; /* 質問ラベルのフォントサイズを大きく */
+            }
+            .form-check-label {
+                font-size: 1.1rem; /* ラジオボタンのラベルのフォントサイズを大きく */
             }
         }
     </style>
@@ -76,7 +90,7 @@
         <div class="card question-card">
             <h2>あなたにぴったりのシナモンロールを見つけましょう！</h2>
             <form id="quiz-form">
-                <div class="mb-3 question">
+                <div class="mb-4 question">
                     <label class="form-label">1. コーヒーには砂糖を入れるタイプですか？</label><br>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="q1" id="q1_yes" value="はい" required>
@@ -88,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3 question">
+                <div class="mb-4 question">
                     <label class="form-label">2. 休日の過ごし方はどちらに近いですか？</label><br>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="q2" id="q2_outdoor" value="アウトドア派" required>
@@ -100,7 +114,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3 question">
+                <div class="mb-4 question">
                     <label class="form-label">3. 映画は洋画よりも邦画が好きですか？</label><br>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="q3" id="q3_yes" value="はい" required>
@@ -112,7 +126,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3 question">
+                <div class="mb-4 question">
                     <label class="form-label">4. 旅行に行くならどちらを選びますか？</label><br>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="q4" id="q4_cold" value="寒い場所" required>
@@ -124,7 +138,7 @@
                     </div>
                 </div>
 
-                <div class="mb-3 question">
+                <div class="mb-4 question">
                     <label class="form-label">5. 朝食はパン派ですか？</label><br>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="q5" id="q5_yes" value="はい" required>
