--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .banner {
             width: 100%;
             height: auto;
-            max-width: 1200px; /* 最大幅を設定 */
+            max-width: 1200px; /* 必要に応じて調整 */
             margin: 0 auto;
             display: block;
         }
@@ -29,8 +29,8 @@
         /* 質問カードと結果カードのスタイル */
         .question-card, .result-card {
             margin: 20px auto;
-            max-width: 1200px; /* バナーと同様の最大幅に設定 */
             width: 100%;
+            max-width: 1200px; /* バナーと同様の最大幅に設定 */
             padding: 20px;
             border-radius: 10px;
             background-color: #ffffff;
@@ -61,8 +61,10 @@
         /* レスポンシブ調整 */
         @media (max-width: 768px) {
             .question-card, .result-card {
-                max-width: 100%; /* 小さな画面では最大幅を解除 */
                 padding: 15px;
+            }
+            .banner, .shop {
+                max-width: 100%;
             }
             .question-card h2, .result-card h2 {
                 font-size: 1.75rem; /* フォントサイズを少し小さく */
@@ -85,81 +87,89 @@
     <!-- ページ上部のバナー -->
     <img src="https://brownroll2025.s3.amazonaws.com/banner.png" alt="Brown Roll Banner" class="banner img-fluid">
 
-    <div class="container">
-        <!-- 質問フォーム -->
-        <div class="card question-card">
-            <h2>あなたにぴったりのシナモンロールを見つけましょう！</h2>
-            <form id="quiz-form">
-                <div class="mb-4 question">
-                    <label class="form-label">1. コーヒーには砂糖を入れるタイプですか？</label><br>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q1" id="q1_yes" value="はい" required>
-                        <label class="form-check-label" for="q1_yes">はい</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q1" id="q1_no" value="いいえ">
-                        <label class="form-check-label" for="q1_no">いいえ</label>
-                    </div>
-                </div>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <!-- 質問フォーム -->
+            <div class="col-12 col-md-10 col-lg-8">
+                <div class="card question-card">
+                    <h2>あなたにぴったりのシナモンロールを見つけましょう！</h2>
+                    <form id="quiz-form">
+                        <div class="mb-4 question">
+                            <label class="form-label">1. コーヒーには砂糖を入れるタイプですか？</label><br>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q1" id="q1_yes" value="はい" required>
+                                <label class="form-check-label" for="q1_yes">はい</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q1" id="q1_no" value="いいえ">
+                                <label class="form-check-label" for="q1_no">いいえ</label>
+                            </div>
+                        </div>
 
-                <div class="mb-4 question">
-                    <label class="form-label">2. 休日の過ごし方はどちらに近いですか？</label><br>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q2" id="q2_outdoor" value="アウトドア派" required>
-                        <label class="form-check-label" for="q2_outdoor">アウトドア派</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q2" id="q2_indoor" value="インドア派">
-                        <label class="form-check-label" for="q2_indoor">インドア派</label>
-                    </div>
-                </div>
+                        <div class="mb-4 question">
+                            <label class="form-label">2. 休日の過ごし方はどちらに近いですか？</label><br>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q2" id="q2_outdoor" value="アウトドア派" required>
+                                <label class="form-check-label" for="q2_outdoor">アウトドア派</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q2" id="q2_indoor" value="インドア派">
+                                <label class="form-check-label" for="q2_indoor">インドア派</label>
+                            </div>
+                        </div>
 
-                <div class="mb-4 question">
-                    <label class="form-label">3. 映画は洋画よりも邦画が好きですか？</label><br>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q3" id="q3_yes" value="はい" required>
-                        <label class="form-check-label" for="q3_yes">はい</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q3" id="q3_no" value="いいえ">
-                        <label class="form-check-label" for="q3_no">いいえ</label>
-                    </div>
-                </div>
+                        <div class="mb-4 question">
+                            <label class="form-label">3. 映画は洋画よりも邦画が好きですか？</label><br>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q3" id="q3_yes" value="はい" required>
+                                <label class="form-check-label" for="q3_yes">はい</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q3" id="q3_no" value="いいえ">
+                                <label class="form-check-label" for="q3_no">いいえ</label>
+                            </div>
+                        </div>
 
-                <div class="mb-4 question">
-                    <label class="form-label">4. 旅行に行くならどちらを選びますか？</label><br>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q4" id="q4_cold" value="寒い場所" required>
-                        <label class="form-check-label" for="q4_cold">寒い場所</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q4" id="q4_hot" value="暑い場所">
-                        <label class="form-check-label" for="q4_hot">暑い場所</label>
-                    </div>
-                </div>
+                        <div class="mb-4 question">
+                            <label class="form-label">4. 旅行に行くならどちらを選びますか？</label><br>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q4" id="q4_cold" value="寒い場所" required>
+                                <label class="form-check-label" for="q4_cold">寒い場所</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q4" id="q4_hot" value="暑い場所">
+                                <label class="form-check-label" for="q4_hot">暑い場所</label>
+                            </div>
+                        </div>
 
-                <div class="mb-4 question">
-                    <label class="form-label">5. 朝食はパン派ですか？</label><br>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q5" id="q5_yes" value="はい" required>
-                        <label class="form-check-label" for="q5_yes">はい</label>
-                    </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="q5" id="q5_no" value="いいえ">
-                        <label class="form-check-label" for="q5_no">いいえ</label>
-                    </div>
-                </div>
+                        <div class="mb-4 question">
+                            <label class="form-label">5. 朝食はパン派ですか？</label><br>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q5" id="q5_yes" value="はい" required>
+                                <label class="form-check-label" for="q5_yes">はい</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="q5" id="q5_no" value="いいえ">
+                                <label class="form-check-label" for="q5_no">いいえ</label>
+                            </div>
+                        </div>
 
-                <button type="submit" class="btn btn-primary w-100">診断する</button>
-            </form>
+                        <button type="submit" class="btn btn-primary w-100">診断する</button>
+                    </form>
+                </div>
+            </div>
         </div>
 
-        <!-- 結果表示 -->
-        <div class="card result-card" id="result" style="display:none;">
-            <h2 id="recommendation"></h2>
-            <img id="menu-image" src="" alt="おすすめメニュー" loading="lazy" class="img-fluid">
-            <p id="description" class="mt-3"></p>
-            <p>価格: ¥<span id="price"></span></p>
+        <div class="row justify-content-center">
+            <!-- 結果表示 -->
+            <div class="col-12 col-md-10 col-lg-8">
+                <div class="card result-card" id="result" style="display:none;">
+                    <h2 id="recommendation"></h2>
+                    <img id="menu-image" src="" alt="おすすめメニュー" loading="lazy" class="img-fluid">
+                    <p id="description" class="mt-3"></p>
+                    <p>価格: ¥<span id="price"></span></p>
+                </div>
+            </div>
         </div>
     </div>
 
