--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="result">
                         <p id="recommendation_intro">あなたにおすすめのシナモンロールは、</p>
                         <p id="recommendation_product" class="product-name"></p>
-                        <p id="recommendation_end">です！</p>
+                        <p id="recommendation">です！</p>
                         <img id="menu-image" src="" alt="おすすめメニュー" loading="lazy" class="img-fluid">
                         <p id="description" class="mt-3"></p>
                         <p>価格: ¥<span id="price"></span></p>
