--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <!-- 質問フォーム -->
             <div class="col-12 col-md-10 col-lg-8">
                 <div class="card question-card">
-                    <h2>あなたにぴったりのシナモンロールは…?1</h2>
+                    <h2>あなたにぴったりのシナモンロールは…?!</h2>
                     <form id="quiz-form">
                         <div class="mb-4 question">
                             <label class="form-label">1. コーヒーには砂糖を入れるタイプですか？</label><br>
