--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                     <div id="result-content" class="d-none">
                         <h2 id="recommendation" class="text-center"></h2>
                         <img id="menu-image" src="" alt="おすすめメニュー" loading="lazy" class="img-fluid">
-                        <p id="description" class="mt-3"></p>
-                        <p>価格: ¥<span id="price"></span></p>
+                        <h2 id="description" class="mt-3"></h2>
+                        <h2>価格: ¥<span id="price"></span></h2>
                     </div>
                 </div>
             </div>
